--- a/src/main/resources/templates/layout/fragments.html
+++ b/src/main/resources/templates/layout/fragments.html
@@ -3,65 +3,135 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6"
       xmlns:th="http://www.thymeleaf.org">
 
-</body>
-  <head th:fragment="head">
-    <title>Bienes Raíces</title>
-    <meta charset="UTF-8"/>
-    <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
-    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-    <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
-    <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-    <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
-  </head>
-  <body>
+    <head th:fragment="head">
+        <title>Bienes Raíces</title>
+        <meta charset="UTF-8"/>
+        <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
+        <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+        <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
+        <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+        <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
+    </head>
+    <body>
 
-  <header th:fragment="header" class="header">
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0">
+        <header th:fragment="header" class="header">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" th:href="@{/}">Nombre de la empresa</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav me-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" th:href="@{/}">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" th:href="@{/properties/listProperties}">Propiedades</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" th:href="@{/aboutUs}">Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" th:href="@{/contact}">Contacto</a>
+                            </li>
+                            <li class="nav-item dropdown" sec:authorize="hasRole('ROLE_ADMIN')">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                   data-bs-toggle="dropdown" aria-expanded="false">
+                                    Admin
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" th:href="@{/user/userList}">Usuarios</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/seller/sellerList}">Vendedores</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/properties/propertyList}">Propiedades</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/reportes/principal}">Reportes</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <ul class="navbar-nav">
+                            <li class="nav-item text-white my-auto">
+                                <img src="../../static/img/ejemplo.jpg" height="40" class="rounded-circle"/>
+                                <span sec:authentication='name'>Jhon</span>
+                            </li>
+                            <li class="nav-item text-white my-auto">
+                                <form method="post" th:action='@{/logout}'>
+                                    <button class="btn btn-dark">
+                                        <i class="fas fa-sign-out-alt"></i>
+                                    </button>
+                                </form>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
 
-      <div>
-        <h2>Nombre de la empresa</h2>
-      </div>
-      <ul>
-        <li><a  th:href="@{/}">Inicio</a></li>
-<!--        Aún no tiene controlador -->
-        <li><a th:href="@{/}">Propiedades</a></li>
-        <li><a th:href="@{/aboutUs}">Nosotros</a></li>
-        <li><a th:href="@{/contact}">Contacto</a></li>
-      </ul>
-      <ul class="navbar-nav" sec:authorize='isAuthenticated()'  >
-        <li class="nav-item text-white my-auto">
-          <img th:src='@{${session.usuarioImagen}}'
-               height="40"
-               class="rounded-circle"
-          />
-          <span sec:authentication='name'>Jhon</span>
-        </li>
-        <li class="nav-item text-white my-auto">
-          <form method="post" th:action='@{/logout}'>
-            <button class="btn btn-dark">
-              <i class="fas fa-sign-out-alt"></i>
-            </button>
-          </form>
-        </li>
-      </ul>
-    </nav>
-  </header>
+        <footer
+            th:fragment= "footer" 
+            class="text-center text-lg-start text-white"
+            style="background-color: #363636"
+            >
+            <!-- Grid container -->
+            <div class="container p-4 pb-0">
+                <section class="">
+                    <ul class="nav justify-content-center">
+                        <li class="nav-item">
+                            <a class="nav-link text-white" th:href="@{/}" style="font-size: 18px;">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" th:href="@{/properties/listProperties}" style="font-size: 18px;">Propiedades</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" th:href="@{/aboutUs}" style="font-size: 18px;">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" th:href="@{/contact}" style="font-size: 18px;">Contacto</a>
+                        </li>
+                    </ul>
+                </section>
 
-  <footer th:fragment= "footer" class="footer">
-    <div>
-      <ul>
+                <!-- Section: Social media -->
+                <section class="mb-4 text-center">
+                    
+                    <!-- Instagram -->
+                    <a
+                        class="btn btn-outline-light btn-floating m-1"
+                        href="#!"
+                        role="button"
+                        ><i class="fab fa-instagram"></i
+                        ></a>
 
-        <li>Inicio</li>
-        <li>Propiedades</li>
-        <li><a th:href="@{/aboutUs}">Nosotros</a></li>
-        <li><a th:href="@{/contact}">Contacto</a></li>
-      </ul>
-    </div>
-    <div class="Iconos">
+                    <!-- Linkedin -->
+                    <a
+                        class="btn btn-outline-light btn-floating m-1"
+                        href="#!"
+                        role="button"
+                        ><i class="fab fa-linkedin-in"></i
+                        ></a>
 
-    </div>
-    <div>
-      <p>Todos los Derechos Reservados.2024</p>
-    </div>
-  </footer>
+                    <!-- Github -->
+                    <a
+                        class="btn btn-outline-light btn-floating m-1"
+                        href="#!"
+                        role="button"
+                        ><i class="fab fa-github"></i
+                        ></a>
+                </section>
+                <!-- Section: Social media -->
+            </div>
+            <!-- Grid container -->
+
+            <!-- Copyright -->
+            <div
+                class="text-center p-3"
+                style="background-color: rgba(0, 0, 0, 0.2)"
+                >
+                © 2020 Copyright: Todos los Derechos Reeservados
+
+            </div>
+            <!-- Copyright -->
+        </footer>
+        <!-- Footer -->
+    </body>
 </html>
