--- a/src/main/resources/templates/properties/listProperties.html
+++ b/src/main/resources/templates/properties/listProperties.html
@@ -2,7 +2,9 @@
     <html xmlns="http://www.w3.org/1999/xhtml"
           xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6"
           xmlns:th="http://www.thymeleaf.org">
-    <head th:replace="~{ layout/fragments :: head }"></head>
+        <head th:replace="~{ layout/fragments :: head }">
+            <title>Bienes Raices</title>
+        </head>
     <body>
         <header th:replace="~{ layout/fragments :: header }"/>
         <main>
