--- a/src/main/resources/templates/category/fragments.html
+++ b/src/main/resources/templates/category/fragments.html
@@ -10,10 +10,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <title>Bienes Raices</title>
     </head>
     <body>
-        <!-- Section to save User it will call a modal window -->
 
-        <section th:fragment="addUser">
-            <div id="addUser" 
+
+
+        <!-- Section to save Seller it will call a modal window -->
+
+        <section th:fragment="addCategory">
+            <div id="addCategory" 
                  class="modal fade" 
                  tabindex="-1" 
                  aria-labelledby="exampleModalLabel" 
@@ -21,45 +24,44 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 <div class="modal-dialog modal-md">
                     <div class="modal-content">
                         <div class="modal-header bg-dark text-white">
-                            <h5 class="modal-title">Agregar Usuario</h5>
+                            <h5 class="modal-title">Agregar Categoría</h5>
                             <button type="button" 
                                     class="btn-close btn-close-white"
                                     data-bs-dismiss="modal" 
                                     aria-label="Close"></button>
                         </div> 
-                        <form th:action="@{/user/guardar}" th:object="${user}"
+                        <form th:action="@{/category/guardar}" th:object="${category}"
                               method="POST" class="was-validated"
                               enctype="multipart/form-data">
                             <div class="modal-body">
                                 <div class="mb-3">
-                                    <label for="nombre">Nombre</label>
-                                    <input type="text" class="form-control" name="nombre" required="true"/>
+                                    <label for="titulo">Nombre</label>
+                                    <input type="text" class="form-control" name="titulo" required="true"/>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="apellidos">Apellidos</label>
-                                    <input type="text" class="form-control" name="apellidos" required="true"/>
+                                    <label for="descripcion">Descripción</label>
+                                    <textarea id="descripcion" class="form-control" name="descripcion" rows="5" cols="10"></textarea>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="username">Nombre de usuario</label>
-                                    <input type="text" class="form-control" name="username" required="true"/>
+                                    
+                                    <label for="estacionamientos">Seleccione un status para la categoría</label>
+                                    <!-- Still not dynamic yet-->
+                                    <select name="status" class="form-control" required="true">
+                                        <option value="">
+                                            --Seleccione
+                                        </option>
+                                        <option value="1">
+                                            Activo
+                                        </option>
+                                         <option value="1">
+                                            Inactivo
+                                        </option>
+                                    </select>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="password">Contraseña</label>
-                                    <input type="password" class="form-control" name="password" required="true"/>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="email">Correo</label>
-                                    <input type="email" class="form-control" name="correo" required="true"/>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="telefono">Telefono</label>
-                                    <input type="tel" class="form-control" name="telefono"/>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="imagen">Imagen de Usuario</label>
+                                    <label for="imagen">Imagen de la Propiedad</label>
                                     <input class="form-control" type="file" name="imagenFile"
                                            onchange="readURL(this);" />
-                                   
                                 </div>
 
                             </div>
@@ -73,47 +75,48 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         </section>
 
 
-        <!--Section User List: Show all users in the Web App-->
-        <section th:fragment="userList" id="users">
+
+        <!--Section CategoryList: Show all categories List in the Web App-->
+        <section th:fragment="categoryList" id="categories">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-md-6">
-                        <h4>Listado de Usuarios</h4>
+                    <div class="col-md-9">
+                        <h4>Listado de Categorías</h4>
                     </div>
-                    <div class="col-md-6 text-end">
+                    <div class="col-md-3 text-end">
                         <button 
                             type="button" 
                             class="btn btn-success px-5 py-2 " 
                             data-bs-toggle="modal" 
-                            data-bs-target="#addUser">
-                            <i class="fas fa-plus"></i>
+                            data-bs-target="#addCategory">
+                            <i class="fas fa-plus"></i> 
                         </button>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-header">
-                        <div th:if="${users != null and !users.empty}">
+                        <div th:if="${categories != null and !categories.empty}">
                             <table class="table table-striped table-hover">
                                 <thead class="table-dark">
                                     <tr>
                                         <th>#</th>
-                                        <th>username</th>
-                                        <th>nombre</th>
-                                        <th>apellidos</th>                                      
+                                        <th>Nombre</th>
+                                        <th>Descripcion</th>
+                                        <th>Status</th>
                                         <th></th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr th:each="user, contador : ${users}">
+                                    <tr th:each="category, contador : ${categories}">
                                         <td>[[${contador.count}]]</td>
-                                        <td>[[${user.username}]]</td>
-                                        <td>[[${user.nombre}]]</td>
-                                        <td>[[${user.apellidos}]]</td>
+                                        <td>[[${category.nombre}]]</td>
+                                        <td>[[${category.descripcion}]]</td>
+                                        <td>[[${category.status}]]</td>
                                         <td sec:authorize="hasRole('ROLE_ADMIN')">
-                                            <a th:href="@{/user/eliminar/}+${user.idUsuario}" class="btn btn-danger">
+                                            <a th:href="@{/category/eliminar/}+${category.idCategory}" class="btn btn-danger">
                                                 <i class="fas fa-trash"></i> [[#{accion.eliminar}]]
                                             </a>
-                                            <a th:href="@{/user/modificar/}+${user.idUsuario}" class="btn btn-success">
+                                            <a th:href="@{/category/modificar/}+${category.idCategory}" class="btn btn-success">
                                                 <i class="fas fa-pencil"></i> [[#{accion.actualizar}]]
                                             </a>
                                         </td>
@@ -121,7 +124,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                 </tbody>
                             </table>
                         </div>
-                        <div class="text-center p-2" th:if="${users == null or users.empty}">
+                        <div class="text-center p-2" th:if="${categories == null or categories.empty}">
                             <span>Lista Vacia</span>
                         </div>
                     </div>
