--- a/src/main/resources/templates/layout/fragments.html
+++ b/src/main/resources/templates/layout/fragments.html
@@ -17,7 +17,7 @@
         <header th:fragment="header" class="header">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand" th:href="@{/}">Nombre de la empresa</a>
+                    <a class="navbar-brand" th:href="@{/}">Bienes Raices</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -37,29 +37,36 @@
                                 <a class="nav-link" th:href="@{/contact}">Contacto</a>
                             </li>
                             <li class="nav-item dropdown" sec:authorize="hasRole('ROLE_ADMIN')">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownAdmin" role="button"
                                    data-bs-toggle="dropdown" aria-expanded="false">
                                     Admin
                                 </a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdownAdmin">
                                     <li><a class="dropdown-item" th:href="@{/user/userList}">Usuarios</a></li>
                                     <li><a class="dropdown-item" th:href="@{/seller/sellerList}">Vendedores</a></li>
                                     <li><a class="dropdown-item" th:href="@{/properties/propertyList}">Propiedades</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/category/categoryList}">Categorias</a></li>
                                     <li><a class="dropdown-item" th:href="@{/reportes/principal}">Reportes</a></li>
                                 </ul>
                             </li>
                         </ul>
-                        <ul class="navbar-nav">
-                            <li class="nav-item text-white my-auto">
-                                <img src="../../static/img/ejemplo.jpg" height="40" class="rounded-circle"/>
-                                <span sec:authentication='name'>Jhon</span>
-                            </li>
-                            <li class="nav-item text-white my-auto">
-                                <form method="post" th:action='@{/logout}'>
-                                    <button class="btn btn-dark">
-                                        <i class="fas fa-sign-out-alt"></i>
-                                    </button>
-                                </form>
+                        <ul class="navbar-nav ml-auto"> <!-- Añadiendo ml-auto para mover el contenido a la derecha -->
+                            <li class="nav-item dropdown mr-5">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownProfile" role="button"
+                                   data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    
+                                    <img src="img/ejemplo.jpg" height="40" class="rounded-circle"/>
+                                   
+                                    <span sec:authentication='name'>Johanna</span>
+                                </a>
+                                <div class="dropdown-menu p-2" aria-labelledby="navbarDropdownProfile">
+                                  
+                                    <a class="dropdown-item"th:href="@{  /profile/perfil}">Perfil</a>
+                                    <div class="dropdown-divider"></div>
+                                    <form method="post" th:action='@{/logout}'>
+                                        <button class="dropdown-item btn btn-sm" type="submit">Logout</button>
+                                    </form>
+                                </div>
                             </li>
                         </ul>
                     </div>
@@ -93,7 +100,7 @@
 
                 <!-- Section: Social media -->
                 <section class="mb-4 text-center">
-                    
+
                     <!-- Instagram -->
                     <a
                         class="btn btn-outline-light btn-floating m-1"
