--- a/src/main/resources/templates/layout/fragments.html
+++ b/src/main/resources/templates/layout/fragments.html
@@ -11,10 +11,12 @@
         <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
         <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
         <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
+        <link th:href="@{/CSS/styles.css}" rel="stylesheet"/>
+        <script src="https://kit.fontawesome.com/686814a22f.js" crossorigin="anonymous"></script>
     </head>
-    <body>
 
-        <header th:fragment="header" class="header">
+    <body>
+    <header th:fragment="header" class="header">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
                     <a class="navbar-brand" th:href="@{/}">Bienes Raices</a>
@@ -28,7 +30,7 @@
                                 <a class="nav-link" th:href="@{/}">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" th:href="@{/properties/listProperties}">Propiedades</a>
+                                <a class="nav-link" th:href="@{/properties/list}">Propiedades</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" th:href="@{/aboutUs}">Nosotros</a>
