Vista individual de propiedad, mejoras en el responsive design y configuración para subir imagenes por medio de firebase

--- a/src/main/resources/templates/layout/fragments.html
+++ b/src/main/resources/templates/layout/fragments.html
@@ -13,6 +13,7 @@
         <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
         <link th:href="@{/CSS/styles.css}" rel="stylesheet"/>
         <script src="https://kit.fontawesome.com/686814a22f.js" crossorigin="anonymous"></script>
+        <script th:src="@{/JS/utils.js}" defer></script>
     </head>
 
     <body>
@@ -89,7 +90,7 @@
                             <a class="nav-link text-white" th:href="@{/}" style="font-size: 18px;">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" th:href="@{/properties/listProperties}" style="font-size: 18px;">Propiedades</a>
+                            <a class="nav-link text-white" th:href="@{/properties/list}" style="font-size: 18px;">Propiedades</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" th:href="@{/aboutUs}" style="font-size: 18px;">Nosotros</a>
