--- a/src/main/resources/static/CSS/styles.css
+++ b/src/main/resources/static/CSS/styles.css
@@ -65,3 +65,209 @@
 .property-info a:hover {
     transform: scale(1.1);
 }
+
+.individual-property {
+    display: flex;
+    align-content: center;
+    justify-content: flex-start;
+    gap: 3rem;
+    width: 90%;
+    margin: 14.4 auto;
+    padding: 6em;
+    border-radius: 20px;
+    background: #eee;
+    min-height: 50vh;
+    margin-bottom: 30rem;
+}
+
+.individual-property img {
+    width: 50%;
+    border-radius: 20px
+}
+
+.individual-property .property-more-info {
+    width: 50%;
+}
+
+.individual-property .property-more-info h4 {
+    margin-bottom: 4rem;
+}
+
+.individual-property .property-more-info > p {
+    font-weight: lighter;
+}
+
+.individual-property .property-more-info h5:nth-child(2) {
+    margin-bottom: 2rem;
+}
+
+.short-characteristics {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1rem;
+    margin-top: 2rem;
+}
+
+.short-characteristics p {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.yes {
+    color: #45C23E;
+}
+
+.no {
+    color: #C3423F;
+}
+
+
+.contact-button {
+    padding: .5em 1.5em;
+    font-size: 1.5rem;
+    background: #e9da70;
+    border-radius: 20px;
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+    display: block;
+    text-align: center;
+    margin-top: 3rem;
+    transition: background .5s ease;
+}
+
+.contact-button:hover {
+    background: #fcee82;
+    color: #fff;
+}
+
+.slideshow-container {
+    max-width: 50%;
+    position: relative;
+}
+  
+
+.mySlides {
+    display: none;
+    object-fit: cover;
+    max-height: 25vh;
+    min-height: 500px;
+}
+  
+.mySlides img {
+    width: 100%;
+    height: 100%;
+}
+
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: 3rem;
+    padding: 16px;
+    color: #fff;
+    font-weight: bold;
+    font-size: 1.1rem;
+    transition: 0.6s ease;
+    border-radius: 50%;
+    user-select: none;
+    background: #3347ff;
+  }
+
+.prev i, .next i {
+    color: #fff;
+}
+  
+.next {
+    right: 5%;
+  }
+  
+.prev {
+    left: 5%;
+}
+
+
+.prev:hover {
+    transform: translateX(-10%);
+}
+
+.next:hover {
+    transform: translateX(10%);
+}
+  
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 3rem .2rem;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+  
+.active, .dot:hover {
+    background-color: #717171;
+}
+
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+  
+@keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+}
+
+.add-button-container {
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 6rem;
+    min-height: 100%;
+}
+
+.add-button {
+    padding: .5em 1em;
+    font-size: 1.8rem;
+    background-color: #45C23E;
+    border-radius: 20px;
+    font-weight: bold;
+    color: #fff;
+    text-decoration: none;
+    transition: all .5s ease;
+}
+
+.add-button:hover {
+    transform: scale(1.1);
+    color: #fff;
+}
+
+
+
+
+@media (max-width: 1000px) {
+    .individual-property {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .individual-property .property-more-info {
+        width: 100%;
+    }
+
+    .individual-property .slideshow-container {
+        min-width: 100%;
+    }
+
+    .property {
+        flex-direction: column;
+    }
+
+    .property img {
+        min-width: 90%;
+    }
+}
