--- a/src/main/resources/templates/properties/fragments.html
+++ b/src/main/resources/templates/properties/fragments.html
@@ -16,91 +16,69 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <!-- Section to save Seller it will call a modal window -->
 
         <section th:fragment="addProperty">
-            <div id="addProperty" 
-                 class="modal fade" 
-                 tabindex="-1" 
-                 aria-labelledby="exampleModalLabel" 
-                 aria-hidden="true">
-                <div class="modal-dialog modal-md">
-                    <div class="modal-content">
-                        <div class="modal-header bg-dark text-white">
-                            <h5 class="modal-title">Agregar Propiedad</h5>
-                            <button type="button" 
-                                    class="btn-close btn-close-white"
-                                    data-bs-dismiss="modal" 
-                                    aria-label="Close"></button>
-                        </div> 
-                        <form th:action="@{/property/guardar}" th:object="${property}"
-                              method="POST" class="was-validated"
-                              enctype="multipart/form-data">
-                            <div class="modal-body">
-                                <div class="mb-3">
-                                    <label for="titulo">Titulo</label>
-                                    <input type="text" class="form-control" name="titulo" required="true"/>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="precio">Precio</label>
-                                    <input type="number" class="form-control" name="precio" required="true"/>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="edadConstruccion">Edad de la Construcción</label>
-                                    <input type="number" class="form-control" name="edadConstruccion" required="true"/>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="direccion">Dirección</label>
-                                    <input type="text" class="form-control" name="direccion" required="true"/>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="descripcion">Descripción</label>
-                                    <textarea id="descripcion" class="form-control" name="descripcion" rows="5" cols="10" >
-                                        
-                                    </textarea>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="wc"> Número Baños</label>
-                                    <input type="number" class="form-control" name="wc" required="true"/>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="habitaciones"> Número Habitaciones</label>
-                                    <input type="number" class="form-control" name="habitaciones" required="true"/>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="estacionamientos">Estacionamientos</label>
-                                    <input type="number" class="form-control" name="estacionamientos" required="true"/>
-                                </div>
-                                <div class="mb-3">
-                                    
-                                    <label for="estacionamientos">Seleccione un vendedor para la propiedad</label>
-                                    <!-- Still not dynamic yet-->
-                                    <select name="vendedor" class="form-control" required="true">
-                                        <option value="">
-                                            --Seleccione
-                                        </option>
-                                        <option value="1">
-                                            --Opcion1
-                                        </option>
-                                         <option value="1">
-                                            --Opcion2
-                                        </option>
-                                    </select>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="imagen">Imagen de la Propiedad</label>
-                                    <input class="form-control" type="file" name="imagenFile"
-                                           onchange="readURL(this);" />
-
-                                </div>
-
-                            </div>
-                            <div class="modal-footer d-flex justify-content-center">
-                                <button class="btn btn-success" type="submit">Guardar</button>
-                            </div>
-                        </form>
+           
+            <form th:action="@{/property/guardar}" th:object="${property}" method="POST" class="was-validated"enctype="multipart/form-data">
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <label for="titulo">Titulo</label>
+                        <input type="text" class="form-control" name="titulo" required="true"/>
                     </div>
+                    <div class="mb-3">
+                        <label for="precio">Precio</label>
+                        <input type="number" class="form-control" name="precio" required="true"/>
+                    </div>
+                    <div class="mb-3">
+                        <label for="edadConstruccion">Edad de la Construcción</label>
+                        <input type="number" class="form-control" name="edadConstruccion" required="true"/>
+                    </div>
+                    <div class="mb-3">
+                        <label for="direccion">Dirección</label>
+                        <input type="text" class="form-control" name="direccion" required="true"/>
+                    </div>
+                    <div class="mb-3">
+                        <label for="descripcion">Descripción</label>
+                        <textarea id="descripcion" class="form-control" name="descripcion" rows="5" cols="10" ></textarea>
+                    </div>
+                    <div class="mb-3">
+                        <label for="wc"> Número Baños</label>
+                        <input type="number" class="form-control" name="numberBathrooms" required="true"/>
+                    </div>
+                    <div class="mb-3">
+                        <label for="habitaciones"> Número Habitaciones:</label>
+                        <input type="number" class="form-control" name="numberRooms" required="true"/>
+                    </div>
+                    <div class="mb-3">
+                        <label for="estacionamientos">Piscina:</label>
+                        <input type="checkbox" class="form-control" name="pool" required="true"/>
+                    </div>
+                    <div class="mb-3">
+                        <select name="vendedor" class="form-control" required="true">
+                            <option value="">
+                                --Seleccione
+                            </option>
+                            <option value="1">
+                                --Opcion1
+                            </option>
+                                <option value="1">
+                                --Opcion2
+                            </option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="imagen">Imagenes de la Propiedad:</label>
+                        <input class="form-control" type="file" name="imagenFile" onchange="readURL(this);" multiple />
+
+                    </div>
+
                 </div>
-            </div>
+                <button class="btn btn-success" >Guardar</button>
+            </form>
         </section>
 
+
+        <div class="add-button-container" th:fragment="addButton">
+            <a th:href="@{/properties/update}" class="add-button">Agregar +</a>
+        </div>
 
 
         <!--Section PropertyList: Show all properties List in the Web App-->
@@ -108,7 +86,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <div class="properties">
                 <h1>Propiedades</h1>
                 <div class="property" th:each="property : ${properties}">
-                    <img src="https://www.bbva.com/wp-content/uploads/2021/04/casas-ecolo%CC%81gicas_apertura-hogar-sostenibilidad-certificado-.jpg" alt="">
+                    <img th:src="${property.images[0].image}" alt="">
                     <div class="property-info">
                         <h3>[[${property.name}]]</h3>
                         <h4>¢[[${property.price}]]</h4>
@@ -124,5 +102,44 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 <span>Lista Vacia</span>
             </div>
         </section>
+
+        <div th:fragment="property" class="individual-property">
+            <div class="slideshow-container">
+
+                <div class="mySlides" th:each="image : ${property.images}">
+                  <img th:src="${image.image}" style="width:100%">
+                </div>
+                <a class="prev" onclick="plusSlides(-1)"><i class="fa-solid fa-angle-left"></i></a>
+                <a class="next" onclick="plusSlides(1)"><i class="fa-solid fa-angle-right"></i></a>
+             
+              
+              <div style="text-align:center">
+                <span class="dot" th:attr="onclick='currentSlide(' + ${counter.count} + ')'" th:each="image, counter: ${property.images}"></span>
+              </div>
+            </div>
+            <div class="property-more-info">
+                <h2>[[${property.name}]]</h2>
+                <h4>¢[[${property.price}]]</h4>
+                
+                <h5>Dueño: [[${property.owner}]]</h>
+                <h5>Agente encargado: [[${property.agent.user.name}]] [[${property.agent.user.firstSurName}]] [[${property.agent.user.secondSurName}]]</h5>
+                
+                <p>Antigüedad: [[${property.antiquity}]] años</p>
+                <p>Modalidad de transacción: [[${property.transactionType}]]</p>
+                
+                <p>Ubicación: [[${property.address.province}]], [[${property.address.canton}]], [[${property.address.street}]], [[${property.address.othersSigns}]]</p>
+                <hr>
+                <h5>Características:</h5>
+                <p>[[${property.characteristics.description}]]</p>
+                <div class="short-characteristics">
+                    <p><i class="fa-solid fa-toilet"></i> [[${property.characteristics.numberBathrooms}]]</p>
+                    <p><i class="fa-solid fa-bed"></i> [[${property.characteristics.numberRooms}]]</p>
+                    <p th:classappend="${property.characteristics.garage ? 'yes' : 'no'}"><i class="fa-solid fa-warehouse"></i> [[${property.characteristics.garage ? "Si" : "No"}]]</p>
+                    <p th:classappend="${property.characteristics.pool ? 'yes' : 'no'}"><i class="fa-solid fa-water-ladder"></i> [[${property.characteristics.pool ? "Si" : "No"}]]</p>
+                </div>
+                <a class="contact-button" th:href="@{/}">Contactar</a>
+            </div>
+        </div>
+
     </body>
 </html>
