--- a/src/main/resources/templates/properties/property.html
+++ b/src/main/resources/templates/properties/property.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
@@ -8,8 +6,8 @@
     </head>
     <body>
         <header th:replace="~{layout/fragments :: header}"></header>
-        <div th:replace="~{properties/fragments :: addButton}"></div>
-        <section th:replace="~{properties/fragments :: propertyList}"></section>
+        
+        <div th:replace="~{properties/fragments :: property}"></div>
         <footer th:replace="~{ layout/fragments :: footer }"/>
 
     </body>
