--- a/src/main/resources/templates/properties/fragments.html
+++ b/src/main/resources/templates/properties/fragments.html
@@ -15,85 +15,118 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 
         <!-- Section to save Seller it will call a modal window -->
 
-        <section th:fragment="addProperty">
+        <section th:fragment="addProperty" class="form-add-property-container">
            
-            <form th:action="@{/property/guardar}" th:object="${property}" method="POST" class="was-validated"enctype="multipart/form-data">
-                <div class="modal-body">
-                    <div class="mb-3">
-                        <label for="titulo">Titulo</label>
-                        <input type="text" class="form-control" name="titulo" required="true"/>
-                    </div>
-                    <div class="mb-3">
-                        <label for="precio">Precio</label>
-                        <input type="number" class="form-control" name="precio" required="true"/>
-                    </div>
-                    <div class="mb-3">
-                        <label for="edadConstruccion">Edad de la Construcción</label>
-                        <input type="number" class="form-control" name="edadConstruccion" required="true"/>
-                    </div>
-                    <div class="mb-3">
-                        <label for="direccion">Dirección</label>
-                        <input type="text" class="form-control" name="direccion" required="true"/>
-                    </div>
-                    <div class="mb-3">
-                        <label for="descripcion">Descripción</label>
-                        <textarea id="descripcion" class="form-control" name="descripcion" rows="5" cols="10" ></textarea>
-                    </div>
-                    <div class="mb-3">
-                        <label for="wc"> Número Baños</label>
-                        <input type="number" class="form-control" name="numberBathrooms" required="true"/>
-                    </div>
-                    <div class="mb-3">
-                        <label for="habitaciones"> Número Habitaciones:</label>
-                        <input type="number" class="form-control" name="numberRooms" required="true"/>
-                    </div>
-                    <div class="mb-3">
-                        <label for="estacionamientos">Piscina:</label>
-                        <input type="checkbox" class="form-control" name="pool" required="true"/>
-                    </div>
-                    <div class="mb-3">
-                        <select name="vendedor" class="form-control" required="true">
-                            <option value="">
-                                --Seleccione
-                            </option>
-                            <option value="1">
-                                --Opcion1
-                            </option>
-                                <option value="1">
-                                --Opcion2
-                            </option>
-                        </select>
-                    </div>
-                    <div class="mb-3">
-                        <label for="imagen">Imagenes de la Propiedad:</label>
-                        <input class="form-control" type="file" name="imagenFile" onchange="readURL(this);" multiple />
-
-                    </div>
-
+            <form th:action="@{/properties/save}" th:object="${property}" method="POST" class="was-validated"enctype="multipart/form-data">
+                <a th:href="@{/properties/list}"><i class="fa-solid fa-arrow-left"></i></a>
+                <h1>Agregar Propiedad</h1>
+                <div class="input-form-add-property">
+                    <label for="name">Nombre:</label>
+                    <input type="text" class="form-control" name="name" id="name" required="true"/>
                 </div>
-                <button class="btn btn-success" >Guardar</button>
+                <div class="input-form-add-property">
+                    <label for="price">Precio:</label>
+                    <input type="number" class="form-control" name="price" id="price" required="true"/>
+                </div>
+                <div class="input-form-add-property">
+                    <label for="owner">Dueño:</label>
+                    <input type="text" class="form-control" name="owner" id="owner" required="true"/>
+                </div>
+                <div class="input-form-add-property">
+                    <label for="transactionType">Tipo de transacción:</label>
+                    <input type="text" class="form-control" name="transactionType" id="transactionType" required="true"/>
+                </div>
+                <div class="input-form-add-property">
+                    <label for="antiquity">Antigüedad de la construcción</label>
+                    <input type="number" class="form-control" name="antiquity" id="antiquity" required="true"/>
+                </div>
+                <div class="input-form-add-property">
+                    <div class="inputs-address">
+                        <div>
+                            <div>
+                                <label for="canton">Canton:</label>
+                                <input type="text" class="form-control" th:field="*{address.canton}" id="canton" required="true"/>
+                            </div>
+                            <div>
+                                <label for="street">Calle:</label>
+                                <input type="text" class="form-control" th:field="*{address.street}" id="street" required="true"/>
+                            </div>
+                            <div>
+                                <label for="address">Provincia:</label>
+                                <select id="province" name="province" class="form-control" required="true" th:field="*{address.province}">
+                                    <option value="0">Seleccione</option>
+                                    <option value="San José">San José</option>
+                                    <option value="Cartago">Cartago</option>
+                                    <option value="Alajuela">Alajuela</option>
+                                    <option value="Limón">Limón</option>
+                                    <option value="Guanacaste">Guanacaste</option>
+                                    <option value="Heredia">Heredia</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div>
+                            <label for="otherSigns">Otras señas:</label>
+                            <textarea id="otherSigns" class="form-control" th:field="*{address.othersSigns}" rows="5" cols="10" ></textarea>
+                        </div>
+                    </div>
+                </div>
+                <div class="input-form-add-property">
+                    <label for="descripcion">Descripción:</label>
+                    <textarea id="descripcion" class="form-control" name="descripcion" rows="5" cols="10" ></textarea>
+                </div>
+                <div class="input-form-add-property">
+                    <label for="numberBathrooms">Número de Baños:</label>
+                    <input type="number" class="form-control" name="numberBathrooms" required="true"/>
+                </div>
+                <div class="input-form-add-property">
+                    <label for="numberRooms">Número de Habitaciones:</label>
+                    <input type="number" class="form-control" name="numberRooms" id="numberRooms" required="true"/>
+                </div>
+                <div class="input-form-add-property">
+                    <div>
+                        <label for="pool">Piscina</label>
+                        <input type="checkbox" class="" id="pool" name="pool"/>
+                    </div>
+                    <div>
+                        <label for="garage">Cochera</label>
+                        <input type="checkbox" class="" name="garage" id="garage"/>
+                    </div>
+                </div>
+                <div class="input-form-add-property">
+                    <label for="agent">Agente:</label>
+                    <select id="agent" name="agent" class="form-control" required="true" th:field="*{agent.user.name}">
+                        <option value="0">Seleccione</option>
+                        <option th:each="agent : ${agents}" th:value="${agent.name}"></option>
+                    </select>
+                </div>
+                <div class="input-form-add-property">
+                    <label for="imagen">Imagenes de la Propiedad:</label>
+                    <input class="form-control" type="file" name="imageFile" onchange="readURL(this);" multiple />
+                    <img src="" alt="">
+                </div>
+
+
+                <button class="button-save-property" >Guardar</button>
             </form>
         </section>
 
 
         <div class="add-button-container" th:fragment="addButton">
-            <a th:href="@{/properties/update}" class="add-button">Agregar +</a>
+            <a th:href="@{/properties/new}" class="add-button">Agregar +</a>
         </div>
 
 
         <!--Section PropertyList: Show all properties List in the Web App-->
-        <section th:fragment="propertyList">
-            <div class="properties">
-                <h1>Propiedades</h1>
-                <div class="property" th:each="property : ${properties}">
-                    <img th:src="${property.images[0].image}" alt="">
-                    <div class="property-info">
-                        <h3>[[${property.name}]]</h3>
-                        <h4>¢[[${property.price}]]</h4>
-                        <p>Dueño: [[${property.owner}]]</p>
-                        <p>Antigüedad: [[${property.antiquity}]] años</p>
-                        <a th:href="@{/properties/} + ${property.idProperty}">Más información <i class="fa-solid fa-arrow-right"></i></a>
-                    </div>
+        <div th:fragment="propertyList" class="properties">
+            <h1>Propiedades</h1>
+            <div class="property" th:each="property : ${properties}">
+                <img th:src="${property.images[0].image}" alt="">
+                <div class="property-info">
+                    <h3>[[${property.name}]]</h3>
+                    <h4>¢[[${property.price}]]</h4>
+                    <p>Dueño: [[${property.owner}]]</p>
+                    <p>Antigüedad: [[${property.antiquity}]] años</p>
+                    <a th:href="@{/properties/} + ${property.idProperty}">Más información <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
 
@@ -101,7 +134,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <div class="text-center p-2" th:if="${properties == null or properties.empty}">
                 <span>Lista Vacia</span>
             </div>
-        </section>
+        </div>
 
         <div th:fragment="property" class="individual-property">
             <div class="slideshow-container">
