--- a/src/main/resources/static/CSS/styles.css
+++ b/src/main/resources/static/CSS/styles.css
@@ -59,7 +59,6 @@
     border-radius: 20px;
     background: #3347ff;
     transition: transform .5s ease;
-    margin-top: 4rem;
 }
 
 .property-info a:hover {
@@ -92,7 +91,6 @@
 .individual-property img {
     width: 50%;
     border-radius: 20px;
-    min-width: 700px
 }
 
 .individual-property .property-more-info {
@@ -232,6 +230,20 @@
     to {opacity: 1}
 }
 
+
+.options-property {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 3rem;
+    flex-wrap: wrap;
+}
+
+
+.options-property a:nth-child(3) {
+    background-color: #C3423F;
+}
+
 .add-button-container {
     width: 80%;
     margin: 0 auto;
@@ -311,7 +323,7 @@
     font-weight: bold;
 }
 
-.form-add-property-container .input-form-add-property:nth-child(12) {
+.form-add-property-container .input-form-add-property:nth-child(12), .form-edit-property-container .input-form-edit-property:nth-child(13) {
     flex-direction: row;
     justify-content: flex-start;
 }
@@ -340,6 +352,55 @@
 }
 
 
+.images-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    gap: 3rem;
+    margin-top: 5rem;
+}
+
+.images-container > div {
+    width: 25%;
+    position: relative;
+    height: 100%;
+}
+
+.images-container div img {
+    width: 100%;
+}
+
+.images-options {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: #0004;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity .5s ease;
+}
+
+.images-options button {
+    outline: 2px solid #C3423F;
+    background-color: transparent;
+    border: none;
+    border-radius: 50%;
+    color: #C3423F;
+    font-size: 1.7rem;
+    font-weight: bold;
+    padding: .3em .5em;
+}
+
+
+.uploaded-images-container:hover .images-options {
+    opacity: 1;
+}
+
 @media (max-width: 1000px) {
     .individual-property {
         flex-direction: column;
@@ -361,5 +422,10 @@
 
     .property img {
         min-width: 90%;
+    }
+
+    .options-property {
+        flex-direction: column;
+        justify-content: flex-start;
     }
 }
