--- a/src/main/resources/templates/layout/fragments.html
+++ b/src/main/resources/templates/layout/fragments.html
@@ -58,7 +58,7 @@
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownProfile" role="button"
                                    data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     
-                                    <img src="img/ejemplo.jpg" height="40" class="rounded-circle"/>
+                                    <img th:src="@{/img/ejemplo.jpg}" height="40" class="rounded-circle"/>
                                    
                                     <span sec:authentication='name'>Johanna</span>
                                 </a>
