--- a/src/main/resources/templates/properties/fragments.html
+++ b/src/main/resources/templates/properties/fragments.html
@@ -12,12 +12,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <body>
 
 
-
-        <!-- Section to save Seller it will call a modal window -->
-
         <section th:fragment="addProperty" class="form-add-property-container">
            
-            <form th:action="@{/properties/save}" th:object="${property}" method="POST" class="was-validated"enctype="multipart/form-data">
+            <form th:action="@{/properties/save}" th:object="${property}" method="POST" class="was-validated" enctype="multipart/form-data">
                 <a th:href="@{/properties/list}"><i class="fa-solid fa-arrow-left"></i></a>
                 <h1>Agregar Propiedad</h1>
                 <div class="input-form-add-property">
@@ -101,9 +98,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     </select>
                 </div>
                 <div class="input-form-add-property">
-                    <label for="imagen">Imagenes de la Propiedad:</label>
-                    <input class="form-control" type="file" name="imageFile" onchange="readURL(this);" multiple />
-                    <img src="" alt="">
+                    <label for="image">Imagenes de la Propiedad:</label>
+                    <input class="form-control" id="image" type="file" name="imageFile" onchange="readURL(this)" multiple />
+                    <div class="images-container">
+
+                    </div>
                 </div>
 
 
@@ -121,13 +120,17 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <div th:fragment="propertyList" class="properties">
             <h1>Propiedades</h1>
             <div class="property" th:each="property : ${properties}">
-                <img th:src="${property.images[0].image}" alt="">
+                <img th:src="${property.imagesLength()} > 0 ? ${property.images[0].image} : 'https://www.shutterstock.com/image-vector/default-ui-image-placeholder-wireframes-600nw-1037719192.jpg'" alt="">
                 <div class="property-info">
                     <h3>[[${property.name}]]</h3>
                     <h4>¢[[${property.price}]]</h4>
                     <p>Dueño: [[${property.owner}]]</p>
                     <p>Antigüedad: [[${property.antiquity}]] años</p>
-                    <a th:href="@{/properties/} + ${property.idProperty}">Más información <i class="fa-solid fa-arrow-right"></i></a>
+                    <div class="options-property">
+                        <a th:href="@{/properties/} + ${property.idProperty}">Más información <i class="fa-solid fa-arrow-right"></i></a>
+                        <a th:href="@{/properties/update/} + ${property.idProperty}">Editar <i class="fa-solid fa-pen-to-square"></i></a>
+                        <a th:href="@{/properties/delete/} + ${property.idProperty}">Eliminar <i class="fa-solid fa-trash"></i></a>
+                    </div>
                 </div>
             </div>
 
@@ -143,6 +146,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 
                 <div class="mySlides" th:each="image : ${property.images}">
                   <img th:src="${image.image}" style="width:100%">
+                </div>
+
+                <div class="mySlides" th:if="${propertyLength == 0}">
+                  <img src="https://www.shutterstock.com/image-vector/default-ui-image-placeholder-wireframes-600nw-1037719192.jpg">
                 </div>
                 <a class="prev" onclick="plusSlides(-1)"><i class="fa-solid fa-angle-left"></i></a>
                 <a class="next" onclick="plusSlides(1)"><i class="fa-solid fa-angle-right"></i></a>
@@ -175,6 +182,114 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 <a class="contact-button" th:href="@{/}">Contactar</a>
             </div>
         </div>
+
+        <section th:fragment="editProperty" class="form-add-property-container">
+
+            <form th:action="@{/properties/update/}" th:object="${property}" method="get" class="was-validated" id="form" enctype="multipart/form-data">
+                <a th:href="@{/properties/list}"><i class="fa-solid fa-arrow-left"></i></a>
+                <h1>Editar Propiedad</h1>
+                <input type="hidden" th:field="*{idProperty}">
+                <div class="input-form-add-property">
+                    <label for="name">Nombre:</label>
+                    <input type="text" class="form-control" th:field="*{name}" id="name" required="true"/>
+                </div>
+                <div class="input-form-add-property">
+                    <label for="price">Precio:</label>
+                    <input type="number" class="form-control" th:field="*{price}" id="price" required="true"/>
+                </div>
+                <div class="input-form-add-property">
+                    <label for="owner">Dueño:</label>
+                    <input type="text" class="form-control" th:field="*{owner}" id="owner" required="true"/>
+                </div>
+                <div class="input-form-add-property">
+                    <label for="transactionType">Tipo de transacción:</label>
+                    <input type="text" class="form-control" th:field="*{transactionType}" id="transactionType" required="true"/>
+                </div>
+                <div class="input-form-add-property">
+                    <label for="antiquity">Antigüedad de la construcción</label>
+                    <input type="number" class="form-control" th:field="*{antiquity}" id="antiquity" required="true"/>
+                </div>
+                <div class="input-form-add-property">
+                    <div class="inputs-address">
+                        <div>
+                            <div>
+                                <label for="canton">Canton:</label>
+                                <input type="text" class="form-control" th:field="*{address.canton}" id="canton" required="true"/>
+                            </div>
+                            <div>
+                                <label for="street">Calle:</label>
+                                <input type="text" class="form-control" th:field="*{address.street}" id="street" required="true"/>
+                            </div>
+                            <div>
+                                <label for="address">Provincia:</label>
+                                <select id="province" name="province" class="form-control" required="true" th:field="*{address.province}">
+                                    <option value="0">Seleccione</option>
+                                    <option value="Cartago">Cartago</option>
+                                    <option value="San José">San José</option>
+                                    <option value="Alajuela">Alajuela</option>
+                                    <option value="Limón">Limón</option>
+                                    <option value="Guanacaste">Guanacaste</option>
+                                    <option value="Heredia">Heredia</option>
+                                    <option value="Puntarenas">Puntarenas</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div>
+                            <label for="otherSigns">Otras señas:</label>
+                            <textarea id="otherSigns" class="form-control" th:field="*{address.othersSigns}" rows="5" cols="10" ></textarea>
+                        </div>
+                    </div>
+                </div>
+                <div class="input-form-add-property">
+                    <label for="descripcion">Descripción:</label>
+                    <textarea id="descripcion" class="form-control" th:field="*{characteristics.description}" rows="5" cols="10" ></textarea>
+                </div>
+                <div class="input-form-add-property">
+                    <label for="numberBathrooms">Número de Baños:</label>
+                    <input type="number" class="form-control" th:field="*{characteristics.numberBathrooms}" required="true"/>
+                </div>
+                <div class="input-form-add-property">
+                    <label for="numberRooms">Número de Habitaciones:</label>
+                    <input type="number" class="form-control" th:field="*{characteristics.numberRooms}" id="numberRooms" required="true"/>
+                </div>
+                <div class="input-form-add-property">
+                    <div>
+                        <label for="pool">Piscina</label>
+                        <input type="checkbox" id="pool" th:field="*{characteristics.garage}"/>
+                    </div>
+                    <div>
+                        <label for="garage">Cochera</label>
+                        <input type="checkbox" th:field="*{characteristics.garage}" id="garage"/>
+                    </div>
+                </div>
+                <div class="input-form-add-property">
+                    <label for="agent">Agente:</label>
+                    <select id="agent" name="agent" class="form-control" required="true" th:field="*{agent.idAgent}">
+                        <option value="0">Seleccione</option>
+                        <option th:each="agent : ${agents}" th:value="${agent.idAgent}">[[${agent.user.name}]] [[${agent.user.firstSurName}]] [[${agent.user.firstSurName}]] ([[${agent.user.identification}]])</option>
+                    </select>
+                </div>
+                <div class="input-form-add-property">
+                    <label for="image">Imagenes de la Propiedad:</label>
+                    <input class="form-control" id="image" type="file" name="imageFile" onchange="readURL(this)" multiple />
+                    <div class="images-container">
+                        <div class="uploaded-images-container" th:attr="data-imageid=${image.generateImageId()}" th:each="image, counter : ${property.images}">
+                            <img class="uploaded-images" th:src="${image.image}" />
+                            <div class="images-options">
+                                <button type="button" th:attr="onclick='deleteImage(\'' + ${image.generateImageId().toString()} + '\')'">
+                                    <i class="fa-solid fa-trash"></i>
+                                </button>
+                                
+                            </div>
+                       </div>
+                    </div>
+                </div>
+
+
+                <button class="button-save-property" >Guardar</button>
+            </form>
+        </section>
+
 
     </body>
 </html>
